<resources>
    <string name="app_name">Battery Alarm</string>
    <string name="stop">Stop</string>
    <string name="sound_notification">Sound Notification</string>
    <string name="tone">Tone</string>
    <string name="volume">Volume</string>
    <string name="enabled_time">Enabled Time [From/To]</string>
    <string name="weekends">Weekends</string>
    <string name="format_tone_text">Enabled Time [From/To] (6:00 - 22:00)</string>
    <string name="err_invalid_time_range">Invalid time range</string>
    <string name="send_mail">Send mail</string>
    <string name="mailgun_key">Mailgun Key</string>
    <string name="device_name">Device Name</string>
    <string name="mailgun_domain">Mailgun Domain</string>
    <string name="mailgun_recepient">Recepient</string>
    <string name="send_test_mail">Send test mail</string>
    <string name="send_test_mail_sending">Sending...</string>
    <string name="action_save">Save</string>
    <string name="export_settings">Export Settings</string>
    <string name="sound">Sound</string>
    <string name="mail">Mail</string>
    <string name="about">About</string>
    <string name="action_import">Import Settings</string>
    <string name="action_export">Export Settings</string>
    <string name="import_settings">Import Settings</string>
    <string name="err_invalid_file_size">File seems to big to be BatteryAlarm settings</string>
    <string name="err_unable_to_finish_op">Unable to finish operation</string>
    <string name="silent_for_next_15mins">15 mins</string>
    <string name="battery_level_x">Battery level:%1$s</string>
    <string name="restart_x">Restart:%1$S</string>
</resources>
