<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <CheckBox
        android:id="@+id/sound_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="@dimen/button_min_size"
        android:text="@string/sound_notification"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/tone_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play"/>

        <Spinner
            android:id="@+id/tone_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volume"/>

    <com.scurab.android.batteryalarm.widget.SeekBar
        android:id="@+id/tone_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/button_min_size"
        android:minHeight="@dimen/button_min_size"
        android:progress="100"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tone_time_input_layout"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tone_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:digits="0123456789:- "
            android:hint="@string/format_tone_text"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/weekends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="@dimen/button_min_size"
        android:text="@string/weekends"/>
</LinearLayout>